2004-11-11  Mark D. Baushke  <mdb@cvshome.org>

	* getopt.m4: Update from GNULIB.

2004-11-09  Mark D. Baushke  <mdb@cvshome.org>

	* strftime.m4: Update from GNULIB.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* uint32_t.m4: Update from GNULIB.

2004-11-03  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Update comment to specify the correct Automake
	version number.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* readlink.m4, xreadlink.m4: New from GNULIB.
	* uint32_t.m4: Update from GNULIB.
	* gnulib.m4: Regenerated.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* getpass.m4, setenv.m4: Update from GNULIB.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* allocsa.m4, eealloc.m4, setenv.m4: New files from GNULIB.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Update comment to eliminate new spaces from
	generated configure script.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Update comment to specify an Automake version
	number, rather than Autoconf.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Comment reasons for forking form GNULIB.

2004-10-25  Derek Price  <derek@ximbiot.com>

	* rpmatch.m4, yesno.m4: New files from GNULIB.

2004-10-22  Derek Price  <derek@ximbiot.com>

	* md5.m4, uint32_t.m4: New files from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* rpmatch.m4, yesno.m4: Back out addition.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* rpmatch.m4, yesno.m4: New files from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* getpagesize.m4: New file from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* realloc.m4: Remove this file.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* malloc.m4: Remove this file.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* sunos57-select.m4: New file. Work around Solaris 7 select()
	hang.

2004-10-18  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update file from GNULIB.
