@@ -1,3 +1,7 @@
+2004-11-17  Derek Price  <derek@ximbiot.com>
+
+	* getopt.m4: Update from GNULIB.
+
 2004-11-11  Mark D. Baushke  <mdb@cvshome.org>
 
 	* getopt.m4: Update from GNULIB.
